--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ processing.log
 draft.ipynb
 temp.html
 __pycache__/welcome.cpython-39.pyc
+temp.text
+__pycache__/WebSource.cpython-39.pyc
+temp-epa.txt
+no.text
+__pycache__/ClearAir.cpython-39.pyc
