--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 processing.log
 draft.ipynb
 temp.html
-__pycache__/welcome.cpython-39.pyc
 temp.text
-__pycache__/WebSource.cpython-39.pyc
 temp-epa.txt
 no.text
-__pycache__/ClearAir.cpython-39.pyc
 temp.py
 .vscode/settings.json
 scratch.ipynb
+scratch.py
+*.pyc
