--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-.pyc
-processing.log
-draft.ipynb
-temp.html
-temp.text
-temp-epa.txt
-no.text
-temp.py
-.vscode/settings.json
-scratch.ipynb
-scratch.py
+.DS_Store
+*.log
 *.pyc
-.gitignore
+scratch.py
+scratch_notebook.ipynb.pyc
+.vscode/settings.json
 configs/fontlist-v330.json
-__pycache__/airnow.cpython-39.pyc
-__pycache__/console.cpython-39.pyc
+.gitignore
